major clean-up of js files

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,12 @@
+.container {
+    margin-top: 30px;
+}
+
 #terminal {
-  background: #222;
-  color: #00ff00; }
+    background: #222;
+    color: #00ff00;
+}
 
 #open {
-  color: #fff; }
-
-/*# sourceMappingURL=main.css.map */
+    color: #fff;
+}
