--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,9 +4,9 @@
 
 <head>
     <title>Smart Safe</title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.js"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css"/>
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css"/>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
 </head>
 
@@ -18,9 +18,7 @@
                 <textarea class="form-control" rows="8" id="terminal"></textarea>
             </div>
             <div class="row-md-4">
-                <form action="">
-                    <input type="button" class="btn btn-primary btn-lg btn-block" id="open" value="OPEN">
-                </form>
+                <button class="btn btn-primary btn-lg btn-block" id="open">OPEN</button>
             </div>
         </div>
     </div>
